--- a/src/app/components/hand-selector/hand-selector.component.html
+++ b/src/app/components/hand-selector/hand-selector.component.html
@@ -1,4 +1,4 @@
-<img (click)="startGame()"
+<img (click)="startGame()" title="start!"
 class="hand-map" src="assets/img/rock_paper_scissors_lizard_spock.jpg"
 usemap="#hand-map"/>
 
