--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,29 +3,45 @@
 }
 
 h1 {
+    color: navy;
     text-align: center;
 }
 
 #stage {
-    width: 704px;
+    width: 762px;
+    height: 430px;
     margin: 20px auto;
+    background-color: navy;
+    border: 6px solid navy;
+    border-radius: 10px;
+}
+
+.how-to {
+    color: navy;
+    text-align: center;
+    font-weight: 600;
 }
 
 .player {
     width: 352px;
     float: left;
+    margin-left: 20px;
 }
 
 .player .score {
+    color: white;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
+    margin: 10px;
 }
 
 .hand-title {
+    color: white;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
+    margin: 10px;
 }
 
 .hand-map {
