--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,11 @@
 </section>
 
 <p class="how-to">Click on the image on the left to start a round.</p>
+
+<p class="quote">It's very simple. Scissors cuts paper, paper covers rock,
+    rock crushes lizard, lizard poisons Spock, Spock smashes scissors, scissors
+    decapitates lizard, lizard eats paper, paper disproves Spock, Spock vaporizes
+    rock, and, as it always has, rock crushes scissors.
+    <br/>
+    <strong>- Sheldon</strong>
+</p>
